gccida/c0/c_expand_end_cond
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:786:6: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if ( if_stack_0[--if_stack_pointer].needs_warning ) 
     ^~~~~~~~~~
     if_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:788:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].file, 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:789:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[if_stack_pointer].line, 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/c_expand_end_cond/src/obj/c-common.o] Error 1
